# Leo-robot

./: .clang-format  .clangd  .gitmodules  LICENSE  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
src/leo_autonomy/: CMakeLists.txt
src/leo_autonomy/config/: grid_map.yaml  rviz.rviz
src/leo_autonomy/include/: enviroment_manager.h  obstacle_spawner.h  rover_controller.h
src/leo_autonomy/launch/: sim.launch
src/leo_autonomy/scripts/: build.sh
src/leo_autonomy/src/: enviroment_manager.cpp  leo_autonomy.cpp  obstacle_spawner.cpp  rover_controller.cpp
src/leo_autonomy/worlds/: static.world
